--- a/index_back.html
+++ b/index_back.html
@@ -66,19 +66,12 @@
 	<div id="main-content" class="container">
 		<h1>Heading</h1>
 		<div class="jumbotron">
-			<img src="/images/farm2.jpg"  class="img-fluid" alt="Picture of trail">
+			
+	
+			<img src="/images/farm_trail_1200.jpg"  class="img-fluid" alt="Picture of trail">
+
 		</div>
-		<div id="tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="sub-html-1"><div id="sub-html-1"><span>link1></span></div></a>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="sub-html-2"><div id="sub-html-2"><span>link2></span></div></a>
-			</div>
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="sub-html-3" target="_blank">
-				<div id="map-tile"><span>map></span></div></a>
-			</div>
+
 	</div>
 	
 
