--- a/index.html
+++ b/index.html
@@ -66,28 +66,29 @@
 	<div id="main-content" class="container">
 		<h1>Heading</h1>
 		<div class="jumbotron">
-			<img src="/images/farm2.jpg"  class="img-fluid" alt="Picture of trail">
+			<img src="../images/farm2.jpg"  class="img-fluid" alt="Picture of trail">
 		</div>
 		<div id="tiles" class="row">
 			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="sub-html-1"><div id="sub-html-1"><span>link1></span></div></a>
+				<a href="sub-html-1"><div id="farm"><span>Farm</span></div></a>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="sub-html-2"><div id="sub-html-2"><span>link2></span></div></a>
+				<a href="sub-html-2"><div id="sossusvlei"><span>Sossusvlei</span></div></a>
 			</div>
 			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="sub-html-3" target="_blank">
-				<div id="map-tile"><span>map></span></div></a>
+				<!--<a href="https://goo.gl/maps/iiqFjMCQmrhTcxbg6" target="_blank">-->
+				<a href="" target="_blank">
+				<div id="map-tile">
+				<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2190.4753520016616!2d17.135561399633787!3d-22.581880483800607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sna!4v1593376337846!5m2!1sen!2sna" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>-->
+				<span>Map</span</div></a>
 			</div>
 	</div>
 	
 
 
 
-	<img src="/images/sossusvlei.jpg" width="400" height="255" alt="picture of dunes"><hr>
-	<img src="/images/farm1.jpg" width="400" height="255" alt="picture of dunes">
-	<img src="/images/farm2.jpg" width="400" height="255" alt="picture of dunes"><hr>
-	<img src="/images/farm3.jpg" width="400" height="255" alt="picture of dunes">
+	
+	
 	<img src="/images/farm4.jpg" width="400" height="255" alt="picture of dunes"><hr>
 
 <!--<div class="container-fluid">
