--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="float-left visible-md visible-lg">
 					<div id="logo-img" alt="Logo image"></div>
 				</a> 
-		    	<a class="navbar-brand" href="index.html"><h1>Siby</h1></a>
+		    	<a class="navbar-brand" href="../index.html"><h1>Siby</h1></a>
 		    </div>
 
 		    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,11 +36,11 @@
 		  	</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
     			<ul class="navbar-nav ml-auto">
-      			<li class="nav-item">
-        			<a class="nav-link" href="#">Home</a>
+      			<li class="nav-item active">
+        			<a class="nav-link" href="../index.html">Home</a>
       			</li>
      			 <li class="nav-item">
-        			<a class="nav-link" href="#">Link</a>
+        			<a class="nav-link" href="../farm.html">Farm</a>
       			</li>
       			<li class="nav-item dropdown">
         			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown
@@ -52,25 +52,21 @@
           				<a class="dropdown-item" href="#">Something else here</a>
         			</div>
       			</li>
+      		</ul>
 			</div>
 		  </div>
 		</nav>
-
-
-
-
-
-
 		<div class="dark_line"></div>
 	</header>
+
 	<div id="main-content" class="container">
-		<h1>Heading</h1>
+		<h1 class="text-center">Info</h1>
 		<div class="jumbotron">
-			<img src="../images/farm2.jpg"  class="img-fluid" alt="Picture of trail">
+			<img src="../images/farm4_1200.jpg"  class="img-fluid" alt="Picture of trail">
 		</div>
 		<div id="tiles" class="row">
 			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="sub-html-1"><div id="farm"><span>Farm</span></div></a>
+				<a href="../farm.html"><div id="farm"><span>Farm</span></div></a>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12">
 				<a href="sub-html-2"><div id="sossusvlei"><span>Sossusvlei</span></div></a>
@@ -80,35 +76,38 @@
 				<a href="" target="_blank">
 				<div id="map-tile">
 				<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2190.4753520016616!2d17.135561399633787!3d-22.581880483800607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sna!4v1593376337846!5m2!1sen!2sna" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>-->
-				<span>Map</span</div></a>
+				<span>Map</span></div></a>
 			</div>
 	</div>
-	
-
-
-
-	
-	
-	<img src="/images/farm4.jpg" width="400" height="255" alt="picture of dunes"><hr>
-
-<!--<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-4 col-sm-6">Col 1</div>
-		<div class="col-md-4 col-sm-6">Col 2</div>
-		<div class="col-md-4 col-sm-6">Col 3</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4 col-sm-6">Col 1</div>
-		<div class="col-md-4 col-sm-6">Col 2</div>
-		<div class="col-md-4 col-sm-6">Col 3</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6">Col 1</div>
-		<div class="col-xs-6">Col 2</div>
-		<div class="col-xs-6">Col 3</div>
-	</div>
 </div>
--->
+	
+	<!--<img src="/images/farm4.jpg" width="400" height="255" alt="picture of dunes"><hr>-->
+	<footer class="panel-footer border-top">
+		<!--<div class="dark_line"></div>-->
+		<div class="container">
+			<div class="row">
+				<section id="hours" class="col-md-4 col-sm-6 col-xs-12">
+					<span>Hours:</span><br>
+					Sun-Thurs: 11:15am - 10:00pm<br>
+					Fri: 11:15am - 2:30pm<br>
+					Saturday Closed
+					
+				</section>
+				<section id="address" class="col-sm-4">
+					<span>Address:</span><br>
+					5 Joseph Wood Street<br>
+					Klein Windhoek<br>
+					Namibia
+				</section>
+				<section id="testimonials" class="col-sm-4">
+					<p>Text</p>
+				</section>
+			</div>
+			<div class="text-center">&copy; Copyright Sibylle 2020</div>
+		</div>
+	</footer>
+
+
 
 <script src="js/jquery-3.5.1.js">></script>
 <script src="js/bootstrap.min.js">></script>
