--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
     			<ul class="navbar-nav ml-auto">
       			<li class="nav-item active">
-        			<a class="nav-link" href="../index.html">Home</a>
+        			<a class="nav-link" href="index.html">Home</a>
       			</li>
      			 <li class="nav-item">
-        			<a class="nav-link" href="../farm.html">Farm</a>
+        			<a class="nav-link" href="farm.html">Farm</a>
       			</li>
       			<li class="nav-item dropdown">
         			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown
@@ -66,7 +66,7 @@
 		</div>
 		<div id="tiles" class="row">
 			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="../farm.html"><div id="farm"><span>Farm</span></div></a>
+				<a href="farm.html"><div id="farm"><span>Farm</span></div></a>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12">
 				<a href="sub-html-2"><div id="sossusvlei"><span>Sossusvlei</span></div></a>
