--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="float-left visible-md visible-lg">
 					<div id="logo-img" alt="Logo image"></div>
 				</a> 
-		    	<a class="navbar-brand" href="../index.html"><h1>Siby</h1></a>
+		    	<a class="navbar-brand" href="index.html"><h1>Siby</h1></a>
 		    </div>
 
 		    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
