--- a/farm.html
+++ b/farm.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="float-left visible-md visible-lg">
 					<div id="logo-img" alt="Logo image"></div>
 				</a> 
-		    	<a class="navbar-brand" href="../index.html"><h1>Siby</h1></a>
+		    	<a class="navbar-brand" href="./index.html"><h1>Siby</h1></a>
 		    </div>
 
 		    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,10 +37,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
     			<ul class="navbar-nav ml-auto">
       			<li class="nav-item">
-        			<a class="nav-link" href="index.html">Home</a>
+        			<a class="nav-link" href="./index.html">Home</a>
       			</li>
      			 <li class="nav-item active">
-        			<a class="nav-link" href="farm.html">Farm</a>
+        			<a class="nav-link" href="./farm.html">Farm</a>
       			</li>
       			<li class="nav-item dropdown">
         			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown
@@ -64,7 +64,7 @@
 		<section class="row">
 			
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-trail.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Trail 1</span>
@@ -72,7 +72,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Trail 2</span>
@@ -80,7 +80,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
@@ -88,7 +88,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
@@ -96,7 +96,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
@@ -104,7 +104,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
@@ -112,7 +112,7 @@
 				</a>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
@@ -120,7 +120,7 @@
 				</a>
 			</div>
 		<div class="col-md-3 col-sm-6 col-xs-12">
-				<a href="../single-category.html">
+				<a href="./single-trail.html">
 					<div class="category-tile">
 						<img width="200px" height="200px" src="../images/farm1_1200.jpg" alt="Lunch">
 						<span>Lunch</span>
