--- a/single-trail.html
+++ b/single-trail.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="float-left visible-md visible-lg">
 					<div id="logo-img" alt="Logo image"></div>
 				</a> 
-		    	<a class="navbar-brand" href="../index.html"><h1>Siby</h1></a>
+		    	<a class="navbar-brand" href="./index.html"><h1>Siby</h1></a>
 		    </div>
 
 		    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,10 +37,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
     			<ul class="navbar-nav ml-auto">
       			<li class="nav-item">
-        			<a class="nav-link" href="../index.html">Home</a>
+        			<a class="nav-link" href="./index.html">Home</a>
       			</li>
      			 <li class="nav-item active">
-        			<a class="nav-link" href="../farm.html">Farm</a>
+        			<a class="nav-link" href="./farm.html">Farm</a>
       			</li>
       			<li class="nav-item dropdown">
         			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown
